# Sponza

./: CMakeLists.txt  Camera.hpp  Light.hpp  Model.hpp  PointLight.hpp  README.MD  Shader.hpp  glad.c  main.cpp
Resources/sponza-gltf/: Sponza.gltf
Shaders/: Base.frag  Base.vert  Light.frag  Light.vert  PBR.frag  PBR.vert  QuadBase.frag  QuadBase.vert  SHADOW.frag
Shaders/DeferredShading/: GBuffer.frag  GBuffer.vert  SHADOW.geom  Screen.frag  SecondPass.frag  ThirdPass.frag  ThirdPass.vert
